--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.7",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "resend": "^6.4.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
