balik muna smtp

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,10 @@
     "debug": "~2.6.9",
     "dotenv": "^17.2.2",
     "express": "^4.21.2",
+    "form-data": "^4.0.4",
     "googleapis": "^162.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^12.1.1",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
